--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/listarplanillasdespacho.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/listarplanillasdespacho.html
@@ -34,20 +34,28 @@
                 </p>
             </div>
 
-            <div class="col-md-2 pull-right">
-                <p class="input-group">
-
+            <div class="col-md-3 pull-right">
+                <div class="input-group">
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-default dropdown-toggle"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >{{filtro.nombre}} <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="filtro in filtros">
+                                <a href="javascript:void(0)" ng-click="onSeleccionFiltro(filtro)">{{filtro.nombre}}</a>
+                            </li>
+                        </ul>
+                    </div>
                     <input type="text" class="form-control" ng-keypress="buscador_planillas_despacho($event);" ng-model="datos_view.termino_busqueda" placeholder="Buscar" name="" id="" />
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit" ng-click="buscar_planillas_despacho(termino_busqueda);"><i class="glyphicon glyphicon-search"></i></button>
                     </span>
-                </p>
+                </div>
             </div>
 
         </div>
 
         <div class="table-responsive" >
-           <div class="defaultGrid grid-responsive"  ng-grid="lista_planillas_despachos"></div>
+            <div class="defaultGrid grid-responsive"  ng-grid="lista_planillas_despachos"></div>
         </div>
 
         </br>
