se agrega precio regulado a la auditoria contrato

--- a/public/dusoft_duana/auditorias/views/auditoriaContratos/listarProductosContrato.html
+++ b/public/dusoft_duana/auditorias/views/auditoriaContratos/listarProductosContrato.html
@@ -10,6 +10,18 @@
                     </button>
                 </p>
             </div>
+            <div class="col-md-6">
+                <h5>Nomenclatura</h5> 
+                <button class="btn btn-xxs btn-primary" style="position: relative;">Todos</button>
+                <button class="btn btn-xxs btn-success" style="position: relative;">Normales</button>
+                <button class="btn btn-xxs btn-danger" style="position: relative;">Alto Costo</button>
+                <button class="btn btn-xxs btn-info" style="position: relative;">Controlados</button>
+                <button class="btn btn-xxs btn-warning" style="position: relative;">Insumos</button>
+                <button class="btn btn-xxs btn-grey" style="position: relative;">Neveras</button>                                                                           
+                <button class="btn btn-xxs btn-info" style="position: relative;">Nutricional</button>                                                                           
+                <button class="btn btn-xxs btn-info" style="position: relative;">Gerencia</button>                                                                           
+
+            </div>  
 
             <div class="col-md-3 pull-right">
                 <div class="input-group">
