--- a/public/dusoft_duana/auditorias/css/style.css
+++ b/public/dusoft_duana/auditorias/css/style.css
@@ -46,3 +46,11 @@
     width:100%;
     height:100px;
 }
+
+.btn-xxs {
+    padding: 1px 5px;
+    font-size: 75%;
+    line-height: 1.5;
+    border-radius: 3px;
+    font-weight: 700;
+}
