--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -61,7 +61,7 @@
                                 <div class="col-md-12 contenedor-tipos-cuentas panel panel-primary">
                                     <h1 class="col-form-label panel-heading titulo-tipo-cuenta"><b>Debito</b></h1>
                                     <div class="col-md-12 panel-body">
-                                        <span class="checkbox col-md-12" style="margin-top: 0px; margin-bottom: 0px;" ng-repeat="category in root.listarTiposCuentas.debito track by category.cuenta_id">
+                                        <span class="checkbox col-md-12" style="margin-top: 0px; margin-bottom: 0px;" ng-repeat="category in root.listarTiposCuentas.debito track by $index">
                                             <div ng-if="category.cuenta_id" class="col-md-12 sin-padding" style="margin-bottom: 15px;">
                                                 <div class="col-md-12">
                                                     <input type="checkbox" ng-disabled="!seccion_1" ng-model="root.listarTiposCuentas.debito[$index].check">
@@ -131,7 +131,7 @@
                                 <div class="col-md-12 contenedor-tipos-cuentas panel panel-primary">
                                     <h1 class="col-form-label titulo-tipo-cuenta panel-heading"><b>Credito</b></h1>
                                     <div class="col-md-12 panel-body">
-                                        <span class="checkbox col-md-12" style="margin-top: 0px; margin-bottom: 0px;" ng-repeat="category in root.listarTiposCuentas.credito track by category.cuenta_id">
+                                        <span class="checkbox col-md-12" style="margin-top: 0px; margin-bottom: 0px;" ng-repeat="category in root.listarTiposCuentas.credito track by $index">
                                             <div ng-if="category.cuenta_id" class="col-md-12 sin-padding" style="margin-bottom: 15px;">
                                                 <div class="col-md-12">
                                                     <input type="checkbox" ng-disabled="!seccion_1" ng-model="root.listarTiposCuentas.credito[$index].check">
