por prueba de pull

--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
@@ -9,7 +9,9 @@
         </div>
 
     </div>
-
+    <div class="contenedorBotones">
+<button class="btn btn-success ng-binding pull-left" ng-click="onIngresarLios()" ng-show="root.tipo == 4">Adjuntar Doc.</button>
+    </div>
 
    <div class="panel panel-info">
         <div class="panel-heading">
