--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
@@ -10,7 +10,7 @@
 
     </div>
     <div class="contenedorBotones">
-<button class="btn btn-success ng-binding pull-left" ng-click="onIngresarLios()" ng-show="root.tipo == 4">Adjuntar Doc.</button>
+<button class="btn btn-success ng-binding pull-left" ng-click="btn_adicionar_documento_lio()" ng-show="root.tipo == 4">Adjuntar Doc.</button>
     </div>
 
    <div class="panel panel-info">
