--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/AdjuntarDocumentoALio.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/AdjuntarDocumentoALio.html
@@ -1,73 +1,93 @@
 <div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading clearfix">
-                    <div class="pull-left col-md-11">
-                        <h4 class="text-center"><strong>Modificar Documento</strong></h4>
-                    </div>
-                    <div class="pull-right">
-                        <div> 
-                            <button ng-click="cerrar()" class="pull-right btn btn-default btn-xs" style="margin-right:15px"><i class="glyphicon glyphicon-remove-circle"> </i> Cerrar</button>   
-                        </div> 
-                    </div>
-                </div>
-                <br>
-
-                <div class="row">
-                    <div class="col-md-3" >
-                        <div class="row">
-                            <div class="col-md-12">
-                                <fieldset>
-                                    <legend>Documento</legend>
-                                    <h4 class=""><strong>{{DocModificar.prefijo}}-{{DocModificar.numero}}</strong></h4>
-                                </fieldset>
-                            </div>
+    <div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading clearfix">
+                        <div class="pull-left col-md-11">
+                            <h4 class="text-center"><strong>Adjuntar Documentos</strong></h4>
+                        </div>
+                        <div class="pull-right">
+                            <div>
+                                <button ng-click="onCerrar()" class="pull-right btn btn-default btn-xs" style="margin-right:15px"><i class="glyphicon glyphicon-remove-circle"> </i> Cerrar</button>   
+                            </div> 
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="panel-body">
 
-                        <fieldset>
-                            <legend>Cantidad Cajas</legend>                                 
-                            <div class="row">  
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" ng-model="DocModificar.cantidad_cajas" name="" id=""/>
+                        <div class="row">                            
+
+                            <div class="col-md-6">
+                                <div class="row" style="margin-bottom: 20px;">
+                                    <div class="col-lg-12">
+                                        <h4>Seleccionar Cliente/Farmacia</h4>                                        
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <p class="input-group col-md-12">
+                                            <select ui-select2=""  class="form-control selectgeneral pull-left" ng-model="datos_view.opcion_predeterminada"  placeholder="Seleccionar Cliente/Farmacia" ng-change="seleccionar_cliente_farmacia()">                                                
+                                                <option value="0">Farmacias</option>
+                                                <option value="1">Clientes</option>
+                                                <option value="2">Otras Empresas</option>
+                                            </select>
+                                        </p>
+                                    </div>
+
+
+
+
+                                    <div class="col-md-5 pull-right">
+                                        <p class="input-group">
+
+                                            <input type="text" class="form-control" ng-keypress="buscador_cliente_farmacia($event);"  ng-model="datos_view.termino_busqueda" placeholder="Buscar" name="" id="" />
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-default" type="submit" ng-click="seleccionar_cliente_farmacia()"><i class="glyphicon glyphicon-search"></i></button>
+                                            </span>
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="" style="height: 500px" ng-grid="lista_clientes_farmacias" > </div>
+
+                                </br>
+
+                            </div>
+
+                            <div class="col-md-6">
+                                <div >
+                                    <div class="row" style="margin-bottom: 20px;">
+                                        <div class="col-lg-12">
+                                            <h4>Seleccionar Documento Bodega</h4> 
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-5 pull-right">
+                                            <p class="input-group">
+
+                                                <input type="text" class="form-control" ng-keypress="buscador_documentos($event);" ng-model="datos_view.termino_busqueda_documentos" placeholder="Buscar" name="" id="" />
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-default" type="submit" ng-click="buscador_documentos({which:13});"><i class="glyphicon glyphicon-search"></i></button>
+                                                </span>
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div ng-switch on="datos_view.mostrarTercero">
+                                    <div ng-switch-when="true" class="" style="height: 500px" ng-grid="lista_remisiones_bodega"> </div>
+                                    <div ng-switch-when="false" class="" style="height: 500px" ng-grid="lista_remisiones_bodega_1"> </div>
+                                    </div>
                                 </div>
                             </div>
-                        </fieldset>
+                            <div class="modal-footer col-md-12">                                         
+                                <button class="btn btn-default" ng-click="aceptar_documentos_bodegas()">
+                                    <span class="glyphicon glyphicon-ok" ></span> Adjuntar
+                                </button>                                
+                            </div>  
+                        </div>
                     </div>
-                    <div class="col-md-3">
-
-                        <fieldset>
-                            <legend>Cantidad Neveras</legend>                                 
-                            <div class="row">  
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" ng-model="DocModificar.cantidad_neveras" name="" id=""/>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </div>
-                    <div class="col-md-3">
-
-                        <fieldset>
-                            <legend>Cantidad Bolsas</legend>                                 
-                            <div class="row">  
-                                <div class="col-md-12">
-                                    <input type="text" class="form-control" ng-model="DocModificar.cantidad_bolsas" name="" id=""/>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </div>
-                </div>
-                <br />
-                <div class="row text-center">
-                    <button type="button" class="btn btn-primary btn-medium" 
-                            aria-haspopup="true" aria-expanded="false" ng-click="guardarDoc()" ng-disabled="habilitarGuardar()"> 
-                        guardar <i class="glyphicon glyphicon-floppy-disk"></i>
-                    </button>
-                </div>
-            </div>       
-        </div>
-    </div>  
-</div>  
-
+                </div>       
+            </div>
+        </div>        
+    </div>
+</div>
