--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarLios.html
@@ -81,7 +81,8 @@
 
     <div class="contenedorBotones">
         <button class="btn btn-primary ng-binding pull-right" ng-click="onIngresarLios()" ng-disabled="root.observacion.length == 0">Aceptar</button>
-        <button class="btn btn-warning pull-right" style="margin-right:20px;" ng-click="cerrar()">Cancelar</button>
+        <button class="btn btn-warning pull-right" style="margin-right:20px;" ng-click="cerrar()" ng-hide="root.tipo == 4">Cancelar</button>
+        <button class="btn btn-warning pull-right" style="margin-right:20px;" ng-click="cerrarLio()" ng-hide="root.tipo != 4">Cancelar</button>
     </div>
 
 
