--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -65,7 +65,7 @@
                                             <div ng-if="category.cuenta_id" class="col-md-12 sin-padding" style="margin-bottom: 15px;">
                                                 <div class="col-md-12">
                                                     <input type="checkbox" ng-disabled="!seccion_1" ng-model="root.listarTiposCuentas.debito[$index].check">
-                                                    <label for="{{root.listarTiposCuentas.debito[$index]}}"><span class="numero-cuenta" ng-model="root.listarTiposCuentas.debito[$index].cuenta_id"><b>{{category.cuenta_id}}</b></span><b> {{category.categoria_descripcion}}</b></label>
+                                                    <label for="{{root.tipesEntries.debito[$index]}}"><span class="numero-cuenta" ng-model="root.listarTiposCuentas.debito[$index].cuenta_id"><b>{{category.cuenta_id}}</b></span><b> {{category.categoria_descripcion}}</b></label>
                                                 </div><br class="col-md-12">
                                                 <div class="col-md-12">
                                                     <div class="col-md-2 contenedor-campos">
@@ -131,32 +131,32 @@
                                 <div class="col-md-12 contenedor-tipos-cuentas panel panel-primary">
                                     <h1 class="col-form-label titulo-tipo-cuenta panel-heading"><b>Credito</b></h1>
                                     <div class="col-md-12 panel-body">
-                                        <span class="checkbox col-md-12" style="margin-top: 0px; margin-bottom: 0px;" ng-repeat="category in root.listarTiposCuentas.credito track by $index">
+                                        <span class="checkbox col-md-12" style="margin-top: 0px; margin-bottom: 0px;" ng-repeat="category in root.tipesEntries.credito track by $index">
                                             <div ng-if="category.cuenta_id" class="col-md-12 sin-padding" style="margin-bottom: 15px;">
                                                 <div class="col-md-12">
-                                                    <input type="checkbox" ng-disabled="!seccion_1" ng-model="root.listarTiposCuentas.credito[$index].check">
-                                                    <label for="{{category}}"><span class="numero-cuenta" ng-model="root.listarTiposCuentas.credito[$index].cuenta_id"><b>{{category.cuenta_id}}</b></span><b> {{category.categoria_descripcion}}</b></label>
+                                                    <input type="checkbox" ng-disabled="!seccion_1" ng-model="root.tipesEntries.credito[$index].check">
+                                                    <label for="{{category}}"><span class="numero-cuenta" ng-model="root.tipesEntries.credito[$index].cuenta_id"><b>{{category.cuenta_id}}</b></span><b> {{category.categoria_descripcion}}</b></label>
                                                 </div><br class="col-md-12">
                                                 <div class="col-md-12">
                                                     <div class="col-md-2 contenedor-campos">
                                                         <label class="col-form-label contenedor-campos-label">Centro Costos Asientos</label>
-                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.listarTiposCuentas.credito[$index].centro_costos_asientos" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Centro Costos Asientos" title="Centro Costos Asientos">
+                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.tipesEntries.credito[$index].centro_costos_asientos" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Centro Costos Asientos" title="Centro Costos Asientos">
                                                     </div>
                                                     <div class="col-md-2 contenedor-campos">
                                                         <label class="col-form-label contenedor-campos-label">Centro Utilidad Asiento</label>
-                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.listarTiposCuentas.credito[$index].centro_utilidad_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Centro Utilidad Asiento" title="Centro Utilidad Asiento">
+                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.tipesEntries.credito[$index].centro_utilidad_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Centro Utilidad Asiento" title="Centro Utilidad Asiento">
                                                     </div>
                                                     <div class="col-md-2 contenedor-campos">
                                                         <label class="col-form-label contenedor-campos-label">Cod Linea Costo Asiento</label>
-                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.listarTiposCuentas.credito[$index].cod_linea_costo_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Cod Linea Costo Asiento" title="Cod Linea Costo Asiento">
+                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.tipesEntries.credito[$index].cod_linea_costo_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Cod Linea Costo Asiento" title="Cod Linea Costo Asiento">
                                                     </div>
                                                     <div class="col-md-2 contenedor-campos">
                                                         <label class="col-form-label contenedor-campos-label">Id Tercero Asiento</label>
-                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.listarTiposCuentas.credito[$index].id_tercero_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Id Tercero Asiento" title="Id Tercero Asiento">
+                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.tipesEntries.credito[$index].id_tercero_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Id Tercero Asiento" title="Id Tercero Asiento">
                                                     </div>
                                                     <div class="col-md-4 contenedor-campos">
                                                         <label class="col-form-label contenedor-campos-label">Observacion Asiento</label>
-                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.listarTiposCuentas.credito[$index].observacion_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Observacion Asiento" title="Observacion Asiento">
+                                                        <input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="root.tipesEntries.credito[$index].observacion_asiento" ng-disabled="!root.listarTiposCuentas.credito[$index].check" placeholder="Observacion Asiento" title="Observacion Asiento">
                                                     </div>
                                                 </div><br class="col-md-12"><br class="col-md-12">
                                             </div>
