Actualizacion, Asignacion de cuentas - Sincronizacion Documentos

--- a/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
+++ b/public/dusoft_duana/sincronizacion/views/asignacionCuentas/asignacionCuentas.html
@@ -31,7 +31,7 @@
                             <label ng-disabled="!boton" ng-click="guardar_cuentas()" class="btn btn-primary col-sm-12"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Guardar Cambios!</label>
                         </div>
                         <div class="col-md-2">
-                            <label ng-disabled="!boton" ng-click="deleteAccount()" class="btn btn-danger col-sm-12"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Eliminar Cuentas!</label>
+                            <label ng-disabled="!boton" ng-click="deleteAccounts()" class="btn btn-danger col-sm-12"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Eliminar Cuentas!</label>
                         </div>
                     </div>
                 </div>
