--- a/public/dusoft_duana/ParametrizacionProductosClientes/views/validationProducts.html
+++ b/public/dusoft_duana/ParametrizacionProductosClientes/views/validationProducts.html
@@ -41,9 +41,9 @@
         </tbody>
     </table>
 </div>
-<span ng-show="root.data.searchProducts.length" ng-click="addProductsContract()" class="col-sm-offset-4 col-sm-4 col-lg-offset-5 col-lg-2 btn" style="background: #399039; color: #FFF; margin-bottom: 4px; margin-top: 20px;">
-    <span style="display: flex; justify-content: center; align-content: center;">
+<span ng-show="root.data.searchProducts.length" ng-click="addProductsContract()" class="col-sm-12" style="display: flex; justify-content: center; align-content: center; margin-bottom: 4px; margin-top: 20px;">
+    <label class="col-sm-3 btn" style="text-align: center; background: #399039; color: #FFF;">
         <i class="glyphicon glyphicon-plus" style="margin-right: 3px; top: 3px;"></i>
-        Agregar Productos al Contrato
-    </span>
+        <span>Agregar Productos al Contrato</span>
+    </label>
 </span><br>
