--- a/public/dusoft_duana/ParametrizacionProductosClientes/views/index.html
+++ b/public/dusoft_duana/ParametrizacionProductosClientes/views/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<div ng-include src="'views/modals/listContractProducts.html'" ng-style="{'display' : modal_updateContract ? 'block':'none' }"></div>
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h5 style="font-weight: bolder; text-align: left; margin:2px;">Buscador de Contratos</h5>
