--- a/public/dusoft_duana/ParametrizacionProductosClientes/views/modals/listContractProducts.html
+++ b/public/dusoft_duana/ParametrizacionProductosClientes/views/modals/listContractProducts.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-primary" ng-if="root.permits.updateContract || root.permits.updateContractProducts">
+        <div class="panel panel-primary" ng-style="{ display: (root.permits.updateContract || root.permits.updateContractProducts) ? 'block':'none' }">
             <div class="panel-heading" style="text-transform: uppercase; text-align: center; margin: 0px; font-weight: 700;">
                 Actualización del contrato
             </div>
@@ -42,12 +42,12 @@
                 <div class="container-table" ng-if="root.permits.updateContract" style="margin-bottom: 35px;">
                     <div ng-include="'views/updateContract.html'"></div>
                 </div>
-                <div class="container-table" ng-if="root.permits.updateContractProducts" style="width: 98%; padding: 0px 0px 0px 0px; margin: 0px auto 0px auto;">
+                <div class="container-table" ng-style="{ opacity : (root.permits.updateContractProducts) ? '1': '0', width: '98%', padding: '0px 0px 0px 0px', margin: '0px auto 0px auto' }" >
                     <h4 style="text-align: center; color: #1c59b5; margin: 19px 0px 15px 0px; position: relative;">Productos & Medicamentos del contrato
                         <span class="btn btn-danger" ng-show="root.data.currentContract.products.length" ng-click="deleteProductsContract(root.data.currentContract.contrato_numero)" style="position: absolute; right: 0; top: -3px;">Borrar <b>TODOS</b> los productos!</span>
                     </h4>
                     <div class="table-responsive contractProducts" style="margin-bottom: 15px;">
-                        <div ng-style="{ display: (root.data.currentContract.products.length)?'block':'none' }" ng-grid="contractProducts" style="width: 100%;"></div>
+                        <div ng-style="{ display: (root.data.currentContract.products.length) ? 'block': 'none' }" ng-grid="contractProducts" style="width: 100%;"></div>
                         <h4 ng-show="!root.data.currentContract.products.length" style="text-align: center; margin: 0px; background: #eaeaea; padding: 10px; font-size: 20px;">
                             <i>Sin productos agregados!</i>
                         </h4>
