--- a/public/dusoft_duana/mensajeria/views/listarmensajes.html
+++ b/public/dusoft_duana/mensajeria/views/listarmensajes.html
@@ -33,7 +33,7 @@
 
 
         <div class="table-responsive" >
-            <div class="defaultGrid grid-responsive"  ng-grid="lista_productos_contratos"></div>
+            <div class="defaultGrid grid-responsive"  ng-grid="lista_mensajes"></div>
         </div>
 
         </br>
