eliminacion en grupo planillas despacho

--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarplanillas.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarplanillas.html
@@ -91,7 +91,7 @@
                                         <legend>Numero Placa</legend>                                 
                                         <div class="row">  
                                             <div class="col-md-12">                                          
-                                                <input type="text" ng-model="planilla.numero_placa_externo" ng-disabled="planilla.get_transportadora() == undefined || planilla.get_transportadora().get_id() != '38'" class="form-control"  placeholder="Ingrese Numero Placa" name="" id="" />
+                                                <input type="text" ng-model="planilla.numero_placa_externo" ng-disabled="planilla.get_transportadora() == undefined" class="form-control"  placeholder="Ingrese Numero Placa" name="" id="" />
                                             </div>
                                         </div>
                                     </fieldset>
