--- a/public/dusoft_duana/ordenescompra/views/genererarordenes/gestionarordenes.html
+++ b/public/dusoft_duana/ordenescompra/views/genererarordenes/gestionarordenes.html
@@ -72,9 +72,10 @@
                         <div class="col-md-6">
                             <fieldset>
                                 <legend>Bodega Destino</legend> 
-                                <div class="row">
+                                <!--se comenta para cambiar bodegas por terceros German-->
+<!--                                <div class="row">
                                     <div class="col-md-7"> 
-                                        <!-- ng-disabled="numero_orden > 0" //-->
+                                         ng-disabled="numero_orden > 0" //
                                         <ui-select ng-disabled="vista_previa"  ng-model="orden_compra.bodegaSeleccionada" theme="select2" class="form-control selectgeneral pull-left" ng-change="onSeleccionBodega(orden_compra.bodegaSeleccionada)" >
                                             <ui-select-match  placeholder="Seleccionar Bodega">{{ $select.selected.getNombre() }} - {{$select.selected.getUbicacion()}}</ui-select-match>
                                             <ui-select-choices refresh="onBuscarBodegas($select.search)" refresh-delay="0" 
@@ -86,19 +87,23 @@
                                     <div class="col-md-3" ng-click="onRemoverDestino()"> 
                                         <button class="btn btn-default">Remover</button>
                                     </div>
-                                </div>
-                            </fieldset>
-                        </div>
-                        <!-- div class="col-md-6">
-                            <fieldset>
-                                <legend>Estado</legend> 
+                                </div>-->
                                 <div class="row">
-                                    <div class="col-md-7">  
-                                        <h3><strong>{{ descripcion_estado }}</strong></h3>
+                                    <div class="col-md-7"> 
+                                        <ui-select ng-disabled="vista_previa"  ng-model="orden_compra.terceroSeleccionado" theme="select2" class="form-control selectgeneral pull-left" ng-change="onSeleccionTercero(orden_compra.terceroSeleccionado)" >
+                                            <ui-select-match  placeholder="Seleccionar Cliente">{{ $select.selected.getNombre() }} - {{$select.selected.getDireccion()}}</ui-select-match>
+                                            <ui-select-choices refresh="onBuscarTerceros($select.search)" refresh-delay="0" 
+                                             repeat="bodega in Empresa.getTerceros() | filter:$select.search">
+                                                {{ bodega.getNombre() }} - {{ bodega.getDireccion()}}
+                                            </ui-select-choices>
+                                        </ui-select>
+                                    </div>
+                                    <div class="col-md-3" ng-click="onRemoverDestinoTercero()"> 
+                                        <button class="btn btn-default">Remover</button>
                                     </div>
                                 </div>
                             </fieldset>
-                        </div -->
+                        </div>
                     </div>   
                     <br>
                     <br>
