--- a/public/dusoft_duana/autorizaciones/views/productosPedidos/listarPedidoDetalle.html
+++ b/public/dusoft_duana/autorizaciones/views/productosPedidos/listarPedidoDetalle.html
@@ -22,9 +22,14 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <p>
                                 <h4>Fecha Pedido: <span ng-bind="fechaSolicitud"></span></h4>
+                                </p>
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                <h4>Observacion: <span ng-bind="observacionPedido"></span></h4>
                                 </p>
                             </div>
                         </div>
