agregar imagenes a  los mensajes desde la computadora

--- a/public/dusoft_duana/mensajeria/views/gestionarmensajes.html
+++ b/public/dusoft_duana/mensajeria/views/gestionarmensajes.html
@@ -81,6 +81,7 @@
 
         <div>
             <textarea ui-tinymce="tinymceOptions" ng-model="tinymceModel"></textarea>
+            <input name="image" type="file" id="upload" class="hidden" onchange="">
             <button type="button" class="btn btn-warning btn-medium" ng-click="setContent()">
                 <span class="glyphicon glyphicon-trash"></span>Limpiar
             </button>
